@@ -1,0 +1,3 @@
+;<?php exit; ?>
+[Module]
+type = PGV_MOD_SIMPLE
